--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,4 +1,8 @@
--COPY . /usr/src/myapp
--WORKDIR /usr/src/myapp
--RUN javac Main.java
--CMD ["java", "Main"] 
+FROM java:7
+COPY . /opt/java-app
+WORKDIR /opt/java-app
+RUN mkdir bin
+RUN javac -d bin src/HelloDocker.java
+RUN echo "Redundant layer" > /tmp/whatevz
+EXPOSE 80 
+ENTRYPOINT ["java","-cp","bin","HelloDocker"] 
